[package]
name = "blossom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.45.0"
erupt = "0.22.0+204"
raw-window-handle = "0.4.3"
bytemuck = "1.9.1"
vk-mem-erupt = {git = "https://github.com/BeastLe9enD/vk-mem-erupt", branch="master"}
log = "0.4.0"
env_logger = "0.9.0"